--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title></title>
   </head>
   <body>
+    <div id="deathOverlay"></div>
+    <div id="deathTextBox">
+      Oh, no! You have become Nos4a2's latest victim.
+      <br />
+      <div style="display: inline-block; transform: scale(2)">☠</div>
+    </div>
+
     <canvas class="webgl"></canvas>
 
     <script type="x-shader/x-vertex" id="vertexshader">
